# final-project-adrianlopezlanchares

./: .gitignore  main.ipynb  pyproject.toml
notebooks/: main.ipynb
src/: data.py  models.py  train.py
