[project]
name = "final-project-adrianlopezlanchares"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numba>=0.61.0",
    "numpy<2.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "shap>=0.49.1",
    "torch>=2.9.1",
    "xgboost>=3.1.2",
]
